--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "startpage",
+  "name": "startpagenpm",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -18,7 +18,6 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0",
-    "web-ext": "^6.8.0"
+    "sirv-cli": "^1.0.0"
   }
 }
