--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,13 @@
 {
 	"manifest_version": 2,
 	"name": "startpage",
-	"version": "1.2.4",
+	"version": "1.2.5",
 	"description": "Custom new tab startpage",
 	"chrome_url_overrides": {
 		"newtab": "index.html"
+	},
+	"chrome_settings_overrides": {
+		"homepage": "index.html"
 	},
 	"browser_specific_settings": {
 		"gecko": {
